# LoadingProgress

./: CMakeLists.txt  Logger.cpp  Logger.h  Observer.cpp  Observer.h  ResourcesLoader.cpp  ResourcesLoader.h  Subject.cpp  main.cpp
Interfaces/: Observer.h  Subject.h
Observer/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Subject/: File.cpp  File.h  FileLoader.cpp  FileLoader.h
tests/: CMakeLists.txt  File.cpp  FileLoader.cpp  ObserverTesting.cpp  test.cpp
